<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_backdrop"
            android:maxHeight="220dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backdrop_placeholder"/>

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rect"
            android:contentDescription="@string/movie_poster"
            android:elevation="20dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_placeholder_light"/>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"/>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="3"
            android:orientation="horizontal"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title">

            <TableRow tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_movie_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="6dp"
                    android:drawableStart="@drawable/baseline_calendar_today_black_18"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorTextPrimaryDark"
                    android:textSize="16sp"
                    tools:text="Year"/>

                <TextView
                    android:id="@+id/tv_movie_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="6dp"
                    android:drawableStart="@drawable/baseline_star_black_18"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorTextPrimaryDark"
                    android:textSize="16sp"
                    tools:text="Average"/>

                <TextView
                    android:id="@+id/tv_movie_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:drawablePadding="6dp"
                    android:drawableStart="@drawable/baseline_timer_black_18"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorTextPrimaryDark"
                    android:textSize="16sp"
                    tools:text="Runtime"/>
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/iv_overview"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/overview_label_icon"
            android:src="@drawable/baseline_description_black_36"
            android:tint="@color/colorAccent"
            android:tintMode="src_atop"
            app:layout_constraintBottom_toTopOf="@+id/tv_label_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_overview"/>

        <TextView
            android:id="@+id/tv_label_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorTextPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"/>

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_overview"
            app:layout_constraintStart_toStartOf="@+id/iv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_overview"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_backdrop"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>